# mi-trading-lab

./: .dockerignore  .gitignore  Dockerfile  Estrategia_Agotamiento_Cristian.md  Estrategia_Agotamiento_SQX_Spec.md  README.md  TEST_PLAN.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-bot.txt  requirements-pa.txt  requirements.txt  v4b-live-deploy.patch
.mplcache/: fontlist-v390.json
config/: default.yaml
data/: Mis_Bots_Polymarket.xlsx  poly_edge_final.csv  poly_edge_v1.csv  poly_edge_v2.csv
mt5/: HobbyCode_FondeoEMA.mq5
para-hermana/: MENSAJE-whatsapp.txt
pythonanywhere/: README.md  setup.sh  wsgi.py
scripts/: _analiza_trades.py  _mina_features.py  agotamiento_backtest.py  agotamiento_faithful.py  agotamiento_sweep.py  analyze_polymarket_edge.py  backtest_v3_v4_v5.py  build_deploy_csv.sh  build_full_forex_gz.py  compare_backtest_vs_live.py  compare_six_bots.py  deploy_pa_backend.py  diagnose_live_clob.py  download_all_dukascopy.py  download_dukascopy_m5.py  duka_one_month.py  entrega_liq_sweep_hoy.py  eval_30d_diagnostic.py  eval_hunt_30d_aggressive.py  eval_hunt_30d_fast.py  eval_hunt_30d_mp.py  eval_hunt_30d_phase.py  eval_hunt_alternatives.py  eval_hunt_alternatives_fast.py  eval_hunt_judas.py  eval_hunt_liq_sweep_grid.py  eval_hunt_liq_sweep_oos.py  eval_hunt_mega_prop.py  eval_hunt_momentum_30d.py  eval_hunt_no_sess_close.py  eval_hunt_safe_v2.py  eval_master_hunt.py  eval_recent_2026.py  eval_regime_compare.py  eval_time_to_pass.py  eval_timing_safe.py  fetch_and_research.sh  fetch_dukascopy_nasdaq.py  fetch_eurusd_m5.py  (+36 more)
(+328 files in other folders)
