[project]
name = "trading-ai"
version = "0.1.0"
description = "AI-powered automated trading system"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.10",
    "websockets>=13.0",
    "rich>=13.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "gymnasium>=1.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "torch>=2.4",
    "stable-baselines3>=2.3",
]
indicators = [
    "pandas-ta>=0.3",
]
notifications = [
    "python-telegram-bot>=21.0",
]
dashboard = [
    "streamlit>=1.39",
    "plotly>=5.24",
]
mt5 = [
    "MetaTrader5>=5.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no network)",
    "integration: tests requiring exchange connection",
    "backtest: backtesting validation tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
